tests/ui/rfcs/rfc-2093-infer-outlives/explicit-dyn.stderr
error: rustc_dump_inferred_outlives
  --> $DIR/explicit-dyn.rs:7:1
   |
LL | struct Foo<'a, A>
   | ^^^^^^^^^^^^^^^^^
   |
   = note: A: 'a

error: aborting due to 1 previous error

